@@ -42,7 +42,8 @@
         <string id="32078">Default iphone-transcode directory</string>  
         <string id="32079">Default psp-transcode directory</string>      
         <string id="32080">Delete all files if processing fails</string>   
-        <string id="32081">Eject inserted medium if job successfull</string>             
+        <string id="32081">Eject inserted medium if job successfull</string>  
+        <string id="32082">Use File instead of device</string>              
 
         <!--              --> 
         <!-- Window-Names -->
